# pandoc_pptx_test

./: .gitignore  README.md  build.sh  mermaid-filter.js  mermaid-filter.py  package-lock.json  package.json  presentation-demo.md  pyproject.toml  template.pptx  test.sh
scripts/: build.sh  clean.sh  test.sh
