[project]
name = "pandoc-pptx-demo"
version = "1.0.0"
description = "Complete workflow for creating PowerPoint presentations from Markdown with mermaid diagrams"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "panflute>=2.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/pandoc-pptx-demo"
Repository = "https://github.com/yourusername/pandoc-pptx-demo.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mermaid-filter.py"]

[tool.uv]
dev-dependencies = []
